--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,8 @@ h2 {
 h3 {
     background-color: var(--color1);
     color: var(--color5);
+    font-size: 26px;
+    padding-bottom: 8px;
 }
 
 .project {
@@ -125,9 +127,12 @@ h3 {
     opacity: 70%;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1000px) {
     nav a {
         line-height: 46px;
         justify-content: center;
+    }
+    section {
+        padding: 0 7%;
     }
 }
