--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,16 @@
 :root {
-    --color1: rgb(228, 129, 0);
-    --color2: rgb(0, 162, 226);
-    --color3: rgb(236, 236, 236);
-    --color4: rgb(70, 70, 70);
-    --color5: rgb(32, 32, 32);
+    --coloraccent: rgb(228, 129, 0);
+    --colorlight: rgb(236, 236, 236);
+    --colormid: rgb(70, 70, 70);
+    --colordark: rgb(32, 32, 32);
 }
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: var(--color3);
+    color: var(--colorlight);
 }
-
 header {
     text-align: center;
     display: flex;
@@ -21,17 +18,15 @@ header {
     align-items: center;
     justify-content: space-between;
     align-items: stretch;
-    background-color: var(--color4);
+    background-color: var(--colormid);
 }
-
 h1 {
-    background-color: var(--color1);
+    background-color: var(--coloraccent);
     font-size: 60px;
     padding: 10px;
     flex-grow: 1;
-    color: var(--color5);
+    color: var(--colordark);
 }
-
 nav {
     display: flex;
     flex-wrap: wrap;
@@ -40,24 +35,20 @@ nav {
     flex-grow: 2;
     gap: 15px;
 }
-
 nav a {
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 1;
 }
-
 nav a:hover {
-    color: var(--color4);
-    background-color: var(--color1);
+    color: var(--colormid);
+    background-color: var(--coloraccent);
 }
-
 a {
     font-weight: bolder;
     text-decoration: none;
 }
-
 section {
     padding: 0 15%;
     display: flex;
@@ -66,67 +57,87 @@ section {
     justify-content: space-around;
     gap: 25px;
 }
-
 section:nth-child(even) {
-    background-color: var(--color4);
+    background-color: var(--colormid);
 }
-
 section:nth-child(odd) {
-    background-color: var(--color5);
+    background-color: var(--colordark);
 }
-
 section:not(:first-child) {
     padding-bottom: 30px;
 }
-
 .about-img {
     flex: 0 1 250px;
     margin: 50px;
 }
-
 .about-img img {
     border-radius: 50%;
     max-width: 100%;
 }
-
 .about-text {
     flex: 1;
 }
-
 h2 {
-    background-color: var(--color1);
-    color: var(--color5);
+    background-color: var(--coloraccent);
+    color: var(--colordark);
     width: 100%;
     font-size: 40px;
     padding: 10px;
 }
-
 h3 {
-    background-color: var(--color1);
-    color: var(--color5);
+    background-color: var(--coloraccent);
+    color: var(--colordark);
     font-size: 26px;
     padding-bottom: 8px;
 }
-
 .project {
     flex: 1 0 300px;
-    border: 8px solid var(--color1);
-    background-color: var(--color3);
+    border: 8px solid var(--coloraccent);
+    background-color: var(--colorlight);
 }
-
 .project:nth-child(2) {
     flex: 100%;
 }
-
 .project img {
     width: 100%;
     display: block;
 }
-
 .project img:hover {
     opacity: 70%;
 }
-
+.contact-flex {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    position: relative;
+}
+.contact-flex form {
+    flex: 1;
+}
+.contact-flex iframe {
+    flex: 1;
+    height: 400px;
+}
+.contact-flex address {
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+}
+input,
+textarea,
+button {
+    width: 100%;
+    padding: 8px;
+    border: none;
+    margin: 10px 0;
+}
+button {
+    color: var(--colordark);
+    background-color: var(--coloraccent);
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+}
 @media screen and (max-width: 1000px) {
     nav a {
         line-height: 46px;
@@ -134,5 +145,18 @@ h3 {
     }
     section {
         padding: 0 7%;
+    }
+}
+@media screen and (max-width: 700px) {
+    .contact-flex {
+        display: block;
+    }
+    .contact-flex iframe {
+        width: 100%;
+        padding: 16px 0;
+    }
+    .contact-flex address {
+        position: static;
+        text-align: center;
     }
 }
