--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,12 @@ button {
     }
 }
 @media screen and (max-width: 700px) {
+    .about-img {
+        margin: 20px 0 0;
+    }
+    .about-text {
+        padding: 0 0 30px 0;
+    }
     .contact-flex {
         display: block;
     }
@@ -158,5 +164,15 @@ button {
     .contact-flex address {
         position: static;
         text-align: center;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    section {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .project {
+        flex: 1 1 100%;
     }
 }
