--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ header {
     align-items: stretch;
     background-color: var(--colormid);
 }
-h1 {
+header h1 {
     background-color: var(--coloraccent);
     font-size: 60px;
     padding: 10px;
@@ -138,6 +138,20 @@ button {
     font-size: 20px;
     font-weight: bold;
 }
+footer {
+    background-color: var(--colordark);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+footer h1 {
+    font-size: 46px;
+}
+.signature {
+    color: var(--colordark);
+    background-color: var(--coloraccent);
+    padding: 0 20px;
+}
 @media screen and (max-width: 1000px) {
     nav a {
         line-height: 46px;
@@ -145,6 +159,14 @@ button {
     }
     section {
         padding: 0 7%;
+    }
+    footer {
+        align-items: center;
+        text-align: center;
+        line-height: 1.5;
+    }
+    .signature {
+        display: block;
     }
 }
 @media screen and (max-width: 700px) {
@@ -166,7 +188,6 @@ button {
         text-align: center;
     }
 }
-
 @media screen and (max-width: 350px) {
     section {
         padding-left: 0;
